# flexcommander-lib

./: CMakeLists.txt  README.md
include/: FlexCommanderFS.h  FlexIO.h  Flexcommander.h  HFSCatalog.h  HFSPlus.h  HFSPlusBTree.h
src/: BTree.c  BTreePrint.c  Devices.c  FSHFSPlus.c  FlexIO.c  HFSCatalog.c  Init.c
src/copy/: Copy.c  Copy.h
src/include/: List.c  List.h
src/utils/: BTreeUtils.c  BTreeUtils.h  Endians.c  Endians.h  Utils.c  Utils.h
